<resources>
    <string name="app_name">ProjetLocation</string>
    <string name="txt_nom_client">Nom : *</string>
    <string name="txt_prenom_client">Prenom : *</string>
    <string name="txt_telephone_client">Telephone : *</string>
    <string name="txt_date_de_naissance_client">Date de naissance : *</string>
    <string name="txt_adresse_client">Adresse :</string>
    <string name="txt_code_postal_client">Code postal :</string>
    <string name="txt_ville_client">Ville :</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="marque">Marque :</string>
    <string name="model">Model :</string>
    <string name="carburant">Carburant :</string>
    <string name="type_de_vehicule">Type de véhicule :</string>
    <string name="prix">Prix :</string>
    <string name="essence">Essence</string>
    <string name="diesel">Diesel</string>
    <string name="gpl">GPL</string>
    <string name="ville">Ville</string>
    <string name="hors_ville">Hors ville</string>
    <string name="ajouter_des_photos">Ajouter des photos</string>
    <string name="bt_rechercher">Rechercher</string>
    <string name="plaque_d_immatriculation">Plaque d\'immatriculation :</string>
    <string name="electrique">Electrique</string>
    <string name="ajouter">Ajouter</string>
    <string name="louees">Louées</string>
    <string name="disponibles">Disponibles</string>
    <string name="toutes">Toutes</string>
    <string name="rechercher">Rechercher</string>
    <string name="euros_jours">€/j</string>
    <string name="prix_la_journ_e">Prix à la journée :</string>
    <string name="prix_mini">10 €</string>
    <string name="type">Type</string>
    <string name="editer">Editer</string>
    <string name="non_disponible">Non-disponible</string>
    <string name="client_x">Client X</string>
    <string name="date_de_location">Date de locationVehicule :</string>
    <string name="historique_des_locations">Historique des locationVehicules</string>
    <string name="disponible">Disponible</string>
    <string name="non_dispo">Non Disponible, louée par :</string>
    <string name="rendre_le_vehicule">Rendre le Vehicule</string>
    <string name="louer_le_vehicule">Louer le véhicule</string>
    <string name="location_d_un_v_hicule">Location d\'un véhicule</string>
    <string name="louer_rendre">Louer/Rendre</string>
    <string name="en_cours">En cours</string>
    <string name="date_depart">Date depart :</string>
    <string name="date_retour">Date Retour :</string>
    <string name="identifiant">Identifiant :</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="choisissez_le_nom_de_votre_agence">Choisissez le nom de votre agence :</string>
    <string name="historique">Historique</string>
</resources>
