<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.eni.ecole.projetlocation.ManageClient">
    <TextView
        android:id="@+id/txt_nom_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_nom_client"/>
    <EditText
        android:id="@+id/ed_nom_client"
        android:layout_below="@id/txt_nom_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_prenom_client"
        android:layout_below="@id/ed_nom_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_prenom_client"/>
    <EditText
        android:id="@+id/ed_prenom_client"
        android:layout_below="@id/txt_prenom_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
    android:id="@+id/txt_telephone_client"
    android:layout_below="@id/ed_prenom_client"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/txt_telephone_client"/>
    <EditText
        android:id="@+id/ed_telephone_client"
        android:layout_below="@id/txt_telephone_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_date_client"
        android:layout_below="@id/ed_telephone_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_date_de_naissance_client"/>
    <EditText
        android:id="@+id/ed_date_client"
        android:layout_below="@id/txt_date_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
    android:id="@+id/txt_adresse_client"
    android:layout_below="@id/ed_date_client"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/txt_adresse_client"/>
    <EditText
        android:id="@+id/ed_adresse_client"
        android:layout_below="@id/txt_adresse_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_codepostal_client"
        android:layout_below="@id/ed_adresse_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_code_postal_client"/>
    <EditText
        android:id="@+id/ed_codepostal_client"
        android:layout_below="@id/txt_codepostal_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_ville_client"
        android:layout_below="@id/ed_codepostal_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_ville_client"/>
    <EditText
        android:id="@+id/ed_ville_client"
        android:layout_below="@id/txt_ville_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_save_client"
        android:layout_below="@+id/ed_ville_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enregistrer"
        android:onClick="onClickSaveClient"
        style="@style/ButtonStyle"/>


</RelativeLayout>
