<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.eni.ecole.projetlocation.SearchVehicule">
    <TextView
        android:id="@+id/txt_legend_prix"
        android:layout_width="@dimen/width_120_dp"
        android:layout_height="wrap_content"
        android:text="@string/prix_la_journ_e"/>
    <TextView
        android:id="@+id/txt_prix"
        android:layout_toEndOf="@id/txt_legend_prix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="10"/>

    <TextView
        android:id="@+id/txt_prix_min"
        android:layout_below="@id/txt_prix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prix_mini"/>
    <SeekBar
        android:id="@+id/sb_select_prix"
        android:layout_below="@id/txt_prix"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/width_20_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <CheckBox
        android:id="@+id/cb_type"
        android:layout_below="@id/sb_select_prix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/width_40_dp"
        android:text="@string/ville"/>
    <Spinner
        android:id="@+id/sp_marque"
        android:layout_below="@id/cb_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>
<Spinner
    android:id="@+id/sp_carburant"
    android:layout_below="@id/sp_marque"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></Spinner>
<Spinner
    android:id="@+id/sp_dispo"
    android:layout_below="@id/sp_carburant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></Spinner>
<Button
    android:id="@+id/bt_search_vehicule"
    android:layout_below="@id/sp_dispo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/bt_rechercher"
    android:onClick="onClickSearchVehicule"/>
</RelativeLayout>
