<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_add_client"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/ajouter"
            android:onClick="onClickAddClient"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/width_10_dp"
            />
        <TextView
            android:id="@+id/txt_recherche_nom_client"
            android:layout_below="@id/bt_add_client"

            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_nom_client"/>

        <EditText
            android:id="@+id/ed_nom_client"
            android:layout_below="@id/txt_recherche_nom_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_recherche_prenom_client"
            android:layout_below="@id/ed_nom_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_prenom_client"/>
        <EditText
            android:id="@id/ed_prenom_client"
            android:layout_below="@+id/txt_recherche_prenom_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_search_client"
            android:layout_below="@id/ed_prenom_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_rechercher"
            android:onClick="onClickSearchClient"
            style="@style/ButtonStyle"/>
    </RelativeLayout>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/lv_clients"
    >


    <ListView
        android:id="@+id/lv_liste_client"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background_border"
        android:padding="15dp"
        ></ListView>
</RelativeLayout>

</LinearLayout>
