<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.eni.ecole.projetlocation.ListeVehiculeActivity">

    <RadioGroup
        android:id="@+id/rg_recherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/rb_loue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/louees"
            android:onClick="onClickRefreshListeVehicules"/>

        <RadioButton
            android:id="@+id/rb_disponible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disponibles"
            android:onClick="onClickRefreshListeVehicules"/>

        <RadioButton
            android:id="@+id/rb_toutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toutes"
            android:onClick="onClickRefreshListeVehicules"/>

    </RadioGroup>

    <ListView
        android:id="@+id/list_vehicules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg_recherche"/>
</RelativeLayout>
